--- a/st_cytoscape/frontend/package.json
+++ b/st_cytoscape/frontend/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "cytoscape": "^3.20.0",
     "cytoscape-fcose": "^2.1.0",
+    "cytoscape-klay": "3.1.3",
     "react-scripts": "3.4.1",
     "streamlit-component-lib": "^1.4.0",
     "typescript": "~3.8.0"
